--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@mui/x-data-grid": "^8.9.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.20.1",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.22.2"
   },
   "devDependencies": {
