--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@google/generative-ai": "^0.24.1",
     "@mui/x-data-grid": "^8.9.1",
     "@radix-ui/react-icons": "^1.3.2",
+    "antd": "^5.26.7",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
