--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@dnd-kit/core": "^6.3.1",
     "@google/generative-ai": "^0.24.1",
     "@mui/x-data-grid": "^8.9.1",
     "@radix-ui/react-icons": "^1.3.2",
