--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@ant-design/icons": "^6.0.0",
     "@dnd-kit/core": "^6.3.1",
     "@google/generative-ai": "^0.24.1",
+    "@hello-pangea/dnd": "^18.0.1",
     "@mui/x-data-grid": "^8.9.1",
     "@radix-ui/react-icons": "^1.3.2",
     "antd": "^5.26.7",
+    "axios": "^1.11.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
